[package]
name = "sig-rs"
version = "1.0.2"
authors = ["Sergey Sherkunov <leinlawun@leinlawun.org>"]
description = "This library implements signals and slots in Rust. See the examples."
documentation = "https://github.com/leinlawun/sig-rs"
homepage = "https://github.com/leinlawun/sig-rs"
repository = "https://github.com/leinlawun/sig-rs"
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
name = "sig"
crate-type = ["dylib"]

[dependencies]
